# taskion

./: .gitignore  README.md
backend/: .env.example  .gitignore  Cargo.toml  STRUCTURE.md  TEST_CASES.md  TEST_RESULTS.md  notion_courses_response.json  notion_todos_response.json  taskion.db-shm  taskion.db-wal
backend/docs/: AUTO_SYNC_COMPLETE.md  AUTO_SYNC_GUIDE.md  OPTIMIZATION.md  TEST_CASES.md  TEST_DEPENDENCIES.md  TEST_RESULTS.md
backend/migrations/: 0001_init.sql
backend/mock/: courses.json  todos.json
backend/src/: error.rs  lib.rs  main.rs  models.rs  repository.rs  routes.rs  scheduler.rs  state.rs
backend/src/api/: mod.rs
backend/src/db/: repository.rs
backend/src/models/: course.rs  mod.rs  todo.rs
backend/src/notion/: dto.rs  mod.rs
backend/src/services/: mod.rs  scheduler.rs  sync_service.rs
backend/src/sync/: mod.rs
backend/tests/: notion_integration_test.rs  scheduler_test.rs
backend/tests/fixtures/: notion_courses_response.json  notion_response.json  notion_todos_response.json
backend/tools/init_ids/: Cargo.toml
backend/tools/init_ids/src/: main.rs
client/Taskion/Taskion/: ContentView.swift  TaskionApp.swift
client/Taskion/Taskion.xcodeproj/: project.pbxproj
client/Taskion/Taskion/Config/: AppConfig.swift
client/Taskion/Taskion/Models/: Course.swift  Todo.swift
client/Taskion/Taskion/Network/: ApiClient.swift  ApiError.swift  (+1 more)
client/Taskion/TaskionTests/: TaskionTests.swift
client/Taskion/TaskionUITests/: TaskionUITests.swift  TaskionUITestsLaunchTests.swift
docs/: data-model.md  roadmap.md  synchronization.md
(+5 files in other folders)
